kubernetes/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fight-ui
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: fight-ui
